# create_woragis_backend

./: Cargo.toml
src/: main.rs
templates/ai_grpc/: Cargo.toml
templates/ai_mixed/: Cargo.toml
templates/ai_rest/: Cargo.toml
templates/grpc/base/: Cargo.toml
templates/mixed/: Cargo.toml
templates/rest/: Cargo.toml  README.md
templates/rest/src/: main.rs
templates/rest/src/data/: database.rs
templates/rest/src/routes/: auth.rs
templates/rest/src/utils/: jwt.rs  mod.rs  rate_limiter.rs
